--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,7 +11,7 @@
     --card-foreground: 0 0% 9%;
 
     --popover: 0 0% 100%;
-    --popover-foreground: 0 0% 9%;
+    --popover-foreground: 222.2 84% 4.9%;
 
     --primary: 0 0% 98%; /* Very light gray for primary backgrounds */
     --primary-foreground: 0 0% 15%; /* Dark gray for text on light backgrounds */
@@ -58,8 +58,8 @@
     --card: 0 0% 3.9%;
     --card-foreground: 0 0% 98%;
 
-    --popover: 0 0% 3.9%;
-    --popover-foreground: 0 0% 98%;
+    --popover: 222.2 84% 4.9%;
+    --popover-foreground: 210 40% 98%;
 
     --primary: 0 0% 9%; 
     --primary-foreground: 0 0% 98%;
@@ -103,8 +103,15 @@
   }
   body {
     @apply bg-background text-foreground;
-    /* Font family will be set by next/font in layout.tsx */
   }
+}
+
+.grid-background {
+  --grid-color: #E1E1E1;
+  background-color: #F3F3F3;
+  background-image: linear-gradient(0deg, transparent 24%, var(--grid-color) 25%, var(--grid-color) 26%, transparent 27%,transparent 74%, var(--grid-color) 75%, var(--grid-color) 76%, transparent 77%,transparent),
+      linear-gradient(90deg, transparent 24%, var(--grid-color) 25%, var(--grid-color) 26%, transparent 27%,transparent 74%, var(--grid-color) 75%, var(--grid-color) 76%, transparent 77%,transparent);
+  background-size: 55px 55px;
 }
 
 /* Custom styles for react-day-picker calendar */
